      "free sprite", "place sprite", "set sprite visible",
      "set sprite palette", "clone sprite", "set sprite frame",
      "get sprite frame", "sprite frame count"
      [Mike, James]
    * "slice x", "slice y", "set slice x", "set slice y", "slice width",
      "slice height", "set horiz align", "set vert align",
      "set horiz anchor", "set vert anchor" [James]

  * Vikings of Midgard

  * Stuff only Developers Will Notice
    * New slice routines for rectangular objects of various styles that
      can be organized into a tree and positioned and sized relative to
      one another. [Mike]
    * gfx_sdl backend flipping and fading problems fixed [James]
    * RPG format number has been incremented to 7 to provide
      forward-compat warnings when loading new RPG files into
      old versions of game [James]

October 03 2008 [xocolatl+]

  * Vikings of Midgard
    * Character portraits [Fenrir-Lunaris]
    * New spell quests [Fenrir-Lunaris]
    * Other minor fixes [Fenrir-Lunaris]

October 02 2008 [xocolatl]

  * New Features
    * Spells and items used outside of battle now display their
      target stat instead of always displaying HP [Mike]
    * Visual placement of hero's hand positions and weapon's
      handle positions. [James]
    * Text boxes can be exported as a .TXT file, edited with
       your favorite text editor or spellchecker, and then
       re-imported back into your game [James, Mike]
    * Character portraits! You can now draw 50x50 pictures for
      heroes and NPCs that can be displayed in text boxes [James]
    * You can now type in NPC numbers in NPC placement mode in the
      map editor [James]
    * You can now type in formation set numbers in foemapping mode
      in the map editor [James]
    * Draw your own graphical Text Box borders [James]
    * NPC-per-map limit raised from 36 to 100 [James]
    * New text box conditional to display menus [James]
    * New menu bitset to advance any open text box when the menu